Fixed Selected Image being cropped at some resolutions

--- a/src/page/components/selected-image.module.css
+++ b/src/page/components/selected-image.module.css
@@ -7,10 +7,12 @@
 
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
 	align-items: center;
 	
 	backdrop-filter: blur(0.5em);
+
+	overflow-y: auto;
+	overflow-x: hidden;
 }
 #selected-image-background.hidden {
 	visibility: hidden;
@@ -22,6 +24,11 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+
+	flex-grow: 1;
+	box-sizing: border-box;
+	width: 100%;
+	padding: 3%;
 
 	transform: translateY(0);
 }
@@ -42,6 +49,9 @@
 	border-radius: 1em;
 
 	cursor: pointer;
+
+	margin: 0 0 4%;
+	z-index: 1;
 }
 #selected-image-parent.loading {
 	transition: none;
@@ -85,7 +95,7 @@
 	font-size: 2.5em;
 	text-align: center;
 
-	margin-bottom: 0;
+	margin: 0; 
 	padding: 0 0.5em;
 
 	filter: drop-shadow(-0.2em -0.2em 0.2em var(--background-color)) drop-shadow(-0.2em 0.2em 0.2em var(--background-color)) 
